syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.am.app";
option java_outer_classname = "Demo";
option objc_class_prefix = "HLW";

package com.am.app;

import "google/api/annotations.proto";

service UserService {
  rpc createUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/user"
      body: "*"
    };
  }
}

message CreateUserRequest {
  string name = 1;
}

message CreateUserResponse {
  string message = 1;
}